# engines-rust-public

./: .dockerignore  .env.example  .gitignore  .gitignore.backup  .railway-deploy  .railwayignore  AGENTS.md  API_KEYS_README.md  API_REQUESTS.md  API_SCHEMAS.md  ARCHITECTURE_MIGRATION_ANALYSIS.md  AUTO_PUBLISH_EXECUTION_ISSUE.md  AUTO_PUBLISH_SETTINGS_NOT_PERSISTING.md  BACKEND_CORS_ANALYSIS.md  BACKEND_CORS_ISSUE.md  BACKEND_TOKENIZATION_REQUIREMENTS.md  BACKEND_VERIFICATION_NEEDED.md  CATTLE_ROBOT_RAILWAY_FIX.md  CHANGELOG.md  CLAUDE.md  CLIENT_DEMO_SETUP.md  CODE_AUDIT_REPORT.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_TRIGGER.txt  DOCKER_TESTING.md  DUAL_REMOTE_ANALYSIS.md  DUAL_REMOTE_INDEX.md  DUAL_REMOTE_QUICKSTART.md  DUAL_REMOTE_SETUP.md  DUAL_REMOTE_SETUP_GUIDE.md  DUAL_REMOTE_STRATEGY_GUIDE.md  Dockerfile  Dockerfile.cattle-robot  EMAIL_CONFIGURATION.md  EXPLICACAO_API_KEYS_PT.md  FINAL_SESSION_REPORT.md  FINAL_STATUS.md  FRONTEND_API_CONFIGURATION.md  (+60 more)
.cargo/: config.toml
.github/: CODE_SANITIZATION_EXPLAINED.md  PUBLIC_REPO_MANIFEST.md
.github/workflows/: concurrency-check.yml  docker-build.yml  sync-to-public.yml
.railway/: defarm-engines-api.toml  ipcm-event-listener.toml
.railway/services/: cattle-robot.toml
config/: Dockerfile  Dockerfile.event-listener  docker-compose.yml  railway.json
config/migrations/: V1__initial_schema.sql  V2__create_cid_timeline.sql  V3__extend_items_identifier_schema.sql  V4__add_timeline_and_stats.sql  V4__password_reset_tokens.sql  V5__password_reset_tokens.sql  V6__add_dfid_to_circuit_operations.sql  V8__add_events_content_hash.sql  V9__create_audit_events.sql
config/nginx/: nginx.conf
docs/: CATTLE_ROBOT.md  CATTLE_ROBOT_QUICKSTART.md  MERKLE_STATE_TREE.md  RAILWAY_CATTLE_ROBOT_DEPLOY.md  README.md  how_i_solved_persistence.md  index.html  openapi-external.yaml
docs/6c5b4f43/: index.html
docs/7b2e9a4f/: index.html  openapi-external.yaml
docs/adr/: 001-concurrency-model.md  002-mutex-safety-pattern.md
docs/api/: API_ANALYSIS_REPORT.md  API_GUIDE.md  GERBOV_INTEGRATION.md  README.md  defarm-api-collection.json  defarm-api-environments.json  index.html  openapi-partner.yaml  openapi.yaml
docs/archived/: ADAPTER_CONFIG_FIX.md  ADAPTER_SIMPLIFICATION_COMPLETE.md  API_STRUCTURE_MISMATCH.md  AUTO_PUBLISH_NOT_EXECUTING.md  AUTO_PUBLISH_STILL_FAILING_POST_DEPLOYMENT.md  AUTO_PUBLISH_STILL_NOT_WORKING.md  BACKEND_VERIFICATION_PROMPT.md  BIGINT_SERIALIZATION_FIX.md  CIRCUIT_ITEMS_ISSUE.md  CRITICAL_FIXES_REMAINING.md  DEPLOYMENT_STATUS.md  FRONTEND_WEBHOOK_IMPLEMENTATION.md  GERBOV_API_old.md  GERBOV_UPDATED_DOC_old.md  POSTGRESQL_ADMIN_PERSISTENCE_TODO.md  POSTGRESQL_READY_FOR_FRONTEND.md  REAL_BLOCKCHAIN_INTEGRATION.md  ROLLBACK_STATUS.md  SESSION_SUMMARY.md  STELLAR_ADAPTERS_STATUS.md  TEST_RESULTS.md  TEST_STATUS_REPORT.md  URGENT_BACKEND_DEPLOYMENT_BROKEN.md
docs/deployment/: CUSTOM_DOMAIN_SETUP.md  RAILWAY_DASHBOARD_SETUP.md  RAILWAY_DEPLOYMENT.md  RAILWAY_QUICK_START.md
docs/development/: CLIENT_DEMO_SETUP.md  GERBOV_TEST_CREDENTIALS.md  GERBOV_UPDATED_DOC.md  INTEGRATION_QUICKSTART.md  TESTING_GUIDE.md  TEST_CIRCUIT_WORKFLOW_README.md
docs/guides/: CLAUDE_INSTRUCTIONS.md
docs/hotfix-2025-10-25/: HOTFIX_COMPLETE_SUMMARY.md  IMPLEMENTATION_PLAN_PHASE2.md  IMPLEMENT_VERSION_ENDPOINT.md  INVESTIGATE_ERROR_RATE.md  METRICS_REPORT.md  NEXT_STEPS.md  QUICK_START_PHASE2.md  README_HOTFIX_DOCS.md
docs/monitoring/: pr3_48h_checkpoints.md
docs/runbooks/: LOCK_SAFETY_AUDIT.md  errors_breakdown.md  perf_baseline.md  railway_monitoring_48h.md  smoke_db.md  staging_check.md
docs/tracking/: pr3_deferred_work.md
examples/: test_bigint_serialization.rs
migrations/: V1__initial_schema.sql  V7__create_robot_tables.sql
nginx/ssl/: fullchain.pem
plans/: ISSUE-events-not-using-events-engine.md  frontend-event-testing-guide.md
public/: demo-circuits.html
scripts/: analyze_errors.sh  check_concurrency.sh  check_mutex_safety.sh  checkpoint_48h.sh  fix-security-issues.sh  fix_circuit_visibility.sh  load_test_login.sh  railway-check.sh  railway-vars.sh  security-scan.sh  seed_demo_data.sh  setup-public-remote.sh  smoke_test.sh  start_cattle_robot.sh  test-dual-remote.sh
scripts/deployment/: deploy.sh  health-check.sh  setup.sh
scripts/testing/: test-adapter-api.sh  test-events.sh  test-production-api.sh
services/event-listener/: railway.toml
src/: activity_engine.rs  activity_engine.rs.backup2  activity_engine.rs.pre_rwlock_migration  adapter_manager.rs  adapter_manager.rs.bak  api_key_engine.rs  api_key_engine.rs.backup2  api_key_middleware.rs  api_key_storage.rs  api_key_storage.rs.pre_rwlock_migration  audit_engine.rs  audit_engine.rs.backup2  auth_middleware.rs  blockchain_event_listener.rs  blocking.rs  cached_postgres_storage.rs  circuit_tokenization_tests.rs  circuits_engine.rs  circuits_engine.rs.backup  circuits_engine.rs.backup2  circuits_engine.rs.bak  circuits_engine.rs.bak2  circuits_engine.rs.bak3  circuits_engine.rs.bak_write  circuits_engine.rs.pre_rwlock_migration  conflict_detection.rs  credit_manager.rs  db_init.rs  dfid_engine.rs  dfid_engine.rs.backup2  email_service.rs  error_handling.rs  error_tracking.rs  events_engine.rs  events_engine.rs.backup2  events_engine.rs.bak  events_engine.rs.bak_events  http_utils.rs  identifier_types.rs  ipfs_client.rs  (+51 more)
src/adapters/: base.rs  config.rs  ipfs_ipfs_adapter.rs  local_ipfs_adapter.rs  local_local_adapter.rs  mod.rs  (+3 more)
tests/: adapter_admin.rs  adapter_integration.rs  adapter_permissions.rs  adapter_stellar.rs  adapter_storage_history.rs  api_endpoints.rs  api_key_integration_test.rs  api_keys.rs  async_safety.rs  circuit_flow.rs  circuit_flow_integration.rs  circuit_lifecycle.rs  circuit_tokenization.rs  comprehensive_circuit_flow.rs  docker_build.rs  docs_structure.rs  engine_smoke.rs  integration_tests.rs  ipcm_contract.rs  items_engine_unit.rs  openapi_sync.rs  persistence_guard_tests.rs  production_evidence_test.rs  security_audit.rs  simple_circuit_test.rs  stellar_test.rs  test_api_keys.rs  user_journeys.rs
(+49 files in other folders)
