[package]
name = "defarm-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "defarm-api"
path = "src/bin/api.rs"

[[bin]]
name = "defarm-demo"
path = "src/main.rs"

[dependencies]
# Core dependencies
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
aes-gcm = "0.10"
rand = "0.8"

# Web server dependencies
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["json", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
tokio-stream = "0.1"

# Authentication
jsonwebtoken = "9.0"
bcrypt = "0.15"

# Environment
dotenv = "0.15"

# Utilities
base64 = "0.22"
base32 = "0.4"
hex = "0.4"
async-trait = "0.1.89"
thiserror = "1.0"

# HTTP client for webhooks and IPFS
reqwest = { version = "0.11", features = ["json", "multipart"] }
url = "2.5"

# Blockchain and cryptography
ed25519-dalek = "2.0"
sha2 = "0.10"

# Stellar/Soroban integration (TODO: Add stellar-xdr for native Rust implementation)
# For now using stellar CLI subprocess - faster to ship, replace later with:
# stellar-xdr = { version = "21", default-features = false, features = ["curr"] }

# PostgreSQL database with connection pooling
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.12"
