[package]
name = "defarm-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "defarm-api"
path = "src/bin/api.rs"

[[bin]]
name = "defarm-demo"
path = "src/main.rs"

[[bin]]
name = "ipcm-event-listener"
path = "src/bin/ipcm_event_listener.rs"

[dependencies]
# Core dependencies
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
aes-gcm = "0.10"
rand = "0.8"

# Web server dependencies
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["json", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
tokio-stream = "0.1"

# Authentication
jsonwebtoken = "9.0"
bcrypt = "0.15"

# Environment
dotenv = "0.15"

# Utilities
base64 = "0.22"
base32 = "0.4"
hex = "0.4"
async-trait = "0.1.89"
thiserror = "1.0"

# HTTP client for webhooks and IPFS
reqwest = { version = "0.11", features = ["json", "multipart"] }
url = "2.5"

# Blockchain and cryptography
ed25519-dalek = "2.0"
sha2 = "0.10"

# Stellar/Soroban SDK integration (native Rust - no CLI needed)
stellar-strkey = "0.0.8"
soroban-client = "0.5"
stellar-xdr = { version = "21", default-features = false, features = ["curr", "std"] }
soroban-sdk = "21"

# PostgreSQL database with connection pooling
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.12"

# Redis cache with connection pooling
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.14"

# OpenAPI documentation generation
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.1"
utoipa-swagger-ui = { version = "8", features = ["axum"] }

[dev-dependencies]
# Testing utilities
regex = "1.10"
walkdir = "2.4"
