[package]
name = "defarm-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "defarm-api"
path = "src/bin/api.rs"

[[bin]]
name = "defarm-demo"
path = "src/main.rs"

[[bin]]
name = "ipcm-event-listener"
path = "src/bin/ipcm_event_listener.rs"

[[bin]]
name = "cattle-robot"
path = "src/bin/cattle_robot.rs"

[dependencies]
# Core dependencies
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
aes-gcm = "0.10"
rand = "0.8"
rand_distr = "0.4"
env_logger = "0.11"
log = "0.4"

# Web server dependencies
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["json", "ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
tokio-stream = "0.1"

# Authentication
jsonwebtoken = "9.0"
bcrypt = "0.15"

# Environment
dotenv = "0.15"

# Utilities
base64 = "0.22"
base32 = "0.4"
hex = "0.4"
async-trait = "0.1.89"
thiserror = "1.0"

# HTTP client for webhooks and IPFS
reqwest = { version = "0.11", features = ["json", "multipart"] }
url = "2.5"

# Email service (MailerSend for password reset emails)
# - reqwest for MailerSend/SendGrid API calls (primary method)
# - lettre for SMTP fallback (increased reliability)
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder"] }

# Blockchain and cryptography
ed25519-dalek = "2.0"
sha2 = "0.10"

# Stellar/Soroban SDK integration (native Rust - no CLI needed)
stellar-strkey = "0.0.8"
soroban-client = "0.5"
stellar-xdr = { version = "21", default-features = false, features = ["curr", "std"] }
soroban-sdk = "21"

# PostgreSQL database with connection pooling
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.12"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Redis cache with connection pooling
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.14"

# OpenAPI documentation generation
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.1"
utoipa-swagger-ui = { version = "8", features = ["axum"] }

[dev-dependencies]
# Testing utilities
regex = "1.10"
walkdir = "2.4"
